Fixed display dropdown on mobile view

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -38,7 +38,23 @@
   .shoutouts-heading {
     font-size: 2em;
   }
+
+  .desktop-view {
+    text-align: center;
+}
+
+div#shoutout-boxset {
+    /* display: block; */
+    width: 500px;
+}
   input#shout-shout-image {
     font-size: .5em;
+  }
+}
+
+@media only screen and (max-width: 500px){
+  div#shoutout-boxset {
+      /* display: block; */
+      width: 320px;
   }
 }
